--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postinstall": "prisma generate",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "prisma": "^6.4.1",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "22.13.10",
