--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 # DATABASE_URL="mysql://root@localhost:3306/hotel_crud"
 DATABASE_URL="mysql://root:@localhost:3306/hotel_crud"
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=https://react-next-crud.vercel.app/
