--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@
 # DATABASE_URL="mysql://root@localhost:3306/hotel_crud"
 DATABASE_URL="mysql://root:@localhost:3306/hotel_crud"
 NEXT_PUBLIC_API_URL=https://react-next-crud.vercel.app/
+NEXT_PUBLIC_FRONTEND_URL=https://react-next-crud.vercel.app
